# Litter-collecting-robot

./: README.md
Hardware/PCB/Front lights/: eagle.epf  schematic.brd  schematic.sch
Hardware/PCB/Rear light/: schematic.brd  schematic.sch
Hardware/PCB/Shield/: connector_shield.GBL  connector_shield.GBO  connector_shield.GBP  connector_shield.GBS  connector_shield.GML  connector_shield.GTL  connector_shield.GTO  connector_shield.GTP  connector_shield.GTS  connector_shield.TXT  connector_shield.brd  connector_shield.dri  connector_shield.gpi  connector_shield.sch  eagle.epf
Hardware/SketchUp/: robot1.skp  robot2.skp  robot3.skp
Hardware/SolidWorks files/Battery holder/: Battery holder.SLDPRT  Battery.SLDPRT
Hardware/SolidWorks files/Cage/: Cage rear support.SLDPRT  Cage rear support.STL  Cage servo support blocker.SLDPRT  Cage servo support blocker.STL  Cage servo support left.SLDPRT  Cage servo support left.STL  Cage servo support right.SLDPRT  Cage servo support right.STL  Cage.SLDPRT
Hardware/SolidWorks files/Camera support/: Camera support.SLDPRT  Lens.SLDPRT  Raspberry Pi camera.SLDPRT
Hardware/SolidWorks files/Chassis/: base.SLDDRW  base.SLDPRT  motor.SLDPRT  plow.SLDDRW  plow.SLDPRT  wheel.SLDPRT
Hardware/SolidWorks files/H-bridge support/: Fuse board.SLDPRT  H-bridge_support.SLDPRT  Motor controller.SLDPRT  Power board.SLDPRT
Software/Raspberry Pi/other/cpp/mmal/src/: CMakeLists.txt  CameraBoard.cpp  VideoBoard.h  raspicam.cpp  raspicam_cv.cpp
Webots simulation/world/: sti_competition.wbt  sti_competition_plan_b.wbt
(+99 files in other folders)
